# SenkaPanel

./: README.md
Requirement/: Requirement.md
Requirement/Design/: 应用界面.rp  文件浏览.rp  状态监控&命令行.rp  登录后首页.rp  登录窗口.rp  终端.rp  网络.rp  首页.rp
senka_panel/: Cargo.toml  Rocket.toml
senka_panel/demo/: common.css  common_page.html  home.css  home.html
senka_panel/server/: Cargo.toml
senka_panel/server/Resources/Languages/: Lang.toml
senka_panel/server/src/: main.rs  tests.rs
senka_panel/server/src/helper/: consts.rs  language_helper.rs  mod.rs
senka_panel/server/src/pages/: home_page.rs
senka_panel/src/: main.rs
senka_panel/src/pages/: front_page.rs  mod.rs
senka_panel/static/css/: common.css
senka_panel/templates/: common_page.html  common_page.html.tera  home.html  home.html.tera  not_found.html  not_found.html.tera
test_project/test_rocket/: Cargo.toml
test_project/test_rocket/src/: main.rs
test_project/test_rocket/src/utilities/: config_tool.rs  error.rs  mod.rs
test_project/test_yew/: Cargo.toml
test_rocket/: Cargo.toml
test_rocket/src/: main.rs
