[package]
name = "senka_panel"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.34.2"
tklog = "0.2.9"
toml = "0.8.20"
tokio = "1.44.2"
bytes = "1.10.1"